--- a/.gitignore
+++ b/.gitignore
@@ -163,13 +163,14 @@ docs/_build/
 target/
 
 # Jupyter Notebook
+.ipynb_checkpoints
 
 # IPython
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -356,3 +357,26 @@ ChatPDF
 Vision
 Full Page
 Invite & Earn
+
+### Project Specific ###
+# Exclude data files but keep directory structure
+data/raw/*
+data/processed/*
+!data/raw/.gitkeep
+!data/processed/.gitkeep
+!data/README.md
+
+# Exclude model files but keep directory structure
+models/*
+!models/.gitkeep
+
+# Exclude results files but keep directory structure
+results/visualizations/*
+!results/.gitkeep
+!results/visualizations/.gitkeep
+
+# Keep all README files
+!*/README.md
+
+# DS_Store
+.DS_Store
