--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,6 @@
-anyio @ file:///croot/anyio_1745334642479/work
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///croot/argon2-cffi-bindings_1736182440035/work
-asttokens @ file:///croot/asttokens_1743630435401/work
-async-lru @ file:///work/perseverance-python-buildout/croot/async-lru_1728387726672/work
-attrs @ file:///croot/attrs_1734533101012/work
-babel @ file:///croot/babel_1737454360933/work
-beautifulsoup4 @ file:///work/perseverance-python-buildout/croot/beautifulsoup4-split_1728385754779/work
-bleach @ file:///io/buildout/croot/bleach_1732918169505/work
-Brotli @ file:///croot/brotli-split_1736182456865/work
-certifi @ file:///croot/certifi_1745939216646/work/certifi
-cffi @ file:///croot/cffi_1736182485317/work
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-comm @ file:///work/perseverance-python-buildout/croot/comm_1728387093347/work
-debugpy @ file:///croot/debugpy_1736267418885/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastjsonschema @ file:///io/buildout/croot/python-fastjsonschema_1735874150137/work
-h11 @ file:///work/perseverance-python-buildout/croot/h11_1728386593025/work
-httpcore @ file:///work/perseverance-python-buildout/croot/httpcore_1728387201560/work
-httpx @ file:///io/perseverance-python-buildout/croot/httpx_1731702618493/work
-idna @ file:///work/perseverance-python-buildout/croot/idna_1728385935861/work
-ipykernel @ file:///croot/ipykernel_1737660677549/work
-ipython @ file:///croot/ipython_1744912971218/work
-ipython_pygments_lexers @ file:///croot/ipython_pygments_lexers_1744753235686/work
-jedi @ file:///croot/jedi_1733987392413/work
-Jinja2 @ file:///croot/jinja2_1741710844255/work
-json5 @ file:///io/perseverance-python-buildout/croot/json5_1731701245495/work
-jsonschema @ file:///io/perseverance-python-buildout/croot/jsonschema_1731700598024/work
-jsonschema-specifications @ file:///io/perseverance-python-buildout/croot/jsonschema-specifications_1731700488901/work
-jupyter-events @ file:///croot/jupyter_events_1741184577592/work
-jupyter-lsp @ file:///croot/jupyter-lsp-meta_1745827015155/work
-jupyter_client @ file:///io/buildout/croot/jupyter_client_1739558249609/work
-jupyter_core @ file:///work/perseverance-python-buildout/croot/jupyter_core_1728385169811/work
-jupyter_server @ file:///croot/jupyter_server_1741200034823/work
-jupyter_server_terminals @ file:///croot/jupyter_server_terminals_1744706698694/work
-jupyterlab @ file:///io/buildout/croot/jupyterlab_1742574277019/work
-jupyterlab_pygments @ file:///croot/jupyterlab_pygments_1741124142640/work
-jupyterlab_server @ file:///io/buildout/croot/jupyterlab_server_1742574181361/work
-MarkupSafe @ file:///croot/markupsafe_1738584038848/work
-matplotlib-inline @ file:///io/buildout/croot/matplotlib-inline_1732912690718/work
-mistune @ file:///croot/mistune_1741124011532/work
-nbclient @ file:///croot/nbclient_1741123995822/work
-nbconvert @ file:///croot/nbconvert-meta_1741184653315/work
-nbformat @ file:///work/perseverance-python-buildout/croot/nbformat_1728385580878/work
-nest_asyncio @ file:///work/perseverance-python-buildout/croot/nest-asyncio_1728387361665/work
-notebook_shim @ file:///croot/notebook-shim_1741707758683/work
-overrides @ file:///work/perseverance-python-buildout/croot/overrides_1728386766389/work
-packaging @ file:///croot/packaging_1734472117206/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///croot/parso_1733963305961/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-platformdirs @ file:///croot/platformdirs_1744273042065/work
-prometheus_client @ file:///croot/prometheus_client_1744271615306/work
-prompt_toolkit @ file:///work/perseverance-python-buildout/croot/prompt-toolkit_1728511366266/work
-psutil @ file:///croot/psutil_1736367091698/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///croot/pygments_1744664109463/work
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1728386193338/work
-python-dateutil @ file:///work/perseverance-python-buildout/croot/python-dateutil_1728385355105/work
-python-json-logger @ file:///croot/python-json-logger_1734370021104/work
-PyYAML @ file:///croot/pyyaml_1731006091482/work
-pyzmq @ file:///croot/pyzmq_1734687138743/work
-referencing @ file:///io/perseverance-python-buildout/croot/referencing_1731700447964/work
-requests @ file:///croot/requests_1730999120400/work
-rfc3339_validator @ file:///work/perseverance-python-buildout/croot/rfc3339-validator_1728386296008/work
-rfc3986_validator @ file:///work/perseverance-python-buildout/croot/rfc3986-validator_1728386318037/work
-rpds-py @ file:///croot/rpds-py_1736541261634/work
-Send2Trash @ file:///croot/send2trash_1736540790175/work
-setuptools==78.1.1
-six @ file:///croot/six_1744271502820/work
-sniffio @ file:///work/perseverance-python-buildout/croot/sniffio_1728386342155/work
-soupsieve @ file:///work/perseverance-python-buildout/croot/soupsieve_1728385708765/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-terminado @ file:///work/perseverance-python-buildout/croot/terminado_1728386365608/work
-tinycss2 @ file:///io/buildout/croot/tinycss2_1739558158888/work
-tornado @ file:///io/buildout/croot/tornado_1735842129908/work
-traitlets @ file:///work/perseverance-python-buildout/croot/traitlets_1728385099292/work
-typing_extensions @ file:///croot/typing_extensions_1734714854207/work
-urllib3 @ file:///croot/urllib3_1737133630106/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings @ file:///work/perseverance-python-buildout/croot/webencodings_1728385731103/work
-websocket-client @ file:///work/perseverance-python-buildout/croot/websocket-client_1728386934860/work
-wheel==0.45.1
-prophet==1.1.5
-pandas==2.2.0
-numpy==1.26.4
-matplotlib==3.8.3
-seaborn==0.13.2
-scikit-learn==1.4.1
-jupyterlab==4.3.4
-notebook==7.1.2
-ipykernel==6.29.3
+pandas>=1.5.3
+matplotlib>=3.7.1
+prophet>=1.1.4
+yfinance>=0.2.28
+numpy>=1.24.3
+plotly>=5.10.0 
